refactor: rewrite SEO copy with search-intent focus

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Free AI Website Audit — SEO Checker & Site Analyzer</title>
-<meta name="description" content="Get a free instant website audit. Check SEO meta tags, heading structure, image alt text, and more. 100% client-side analysis.">
+<title>Your Website Is Losing Traffic — Find Out Why in 30 Seconds</title>
+<meta name="description" content="Your website is losing traffic. Run a free instant SEO audit and find out why in 30 seconds. Check meta tags, headings, images, and more.">
 <meta name="keywords" content="website audit, SEO checker, site analyzer, meta tag checker, free SEO tool">
 <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🔍</text></svg>">
 <style>
@@ -92,8 +92,8 @@ footer{text-align:center;padding:40px 20px;color:var(--text2);font-size:.85rem}
 
 <header>
   <div class="badge">✨ 100% Free — No Sign-up Required</div>
-  <h1>🔍 AI Website Audit</h1>
-  <p>Instantly analyze any website for SEO issues, accessibility problems, and performance opportunities.</p>
+  <h1>Your website is losing traffic.</h1>
+  <p>Find out why in 30 seconds. Free instant SEO audit — no signup needed.</p>
 </header>
 
 <div class="container">
