fix: correct Gumroad CTA links

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ footer{text-align:center;padding:40px 20px;color:var(--text2);font-size:.85rem}
   <div class="cta-box" id="ctaBox" style="display:none">
     <h3>🚀 Want a Deep Audit with Actionable Fixes?</h3>
     <p>Get a comprehensive 50+ point audit report with prioritized recommendations, competitor analysis, and step-by-step fix guide.</p>
-    <a href="https://gumroad.com" target="_blank" rel="noopener">Get Full Audit Report — $29</a>
+    <a href="https://maxmini.gumroad.com" target="_blank" rel="noopener">Get Full Audit Report — $29</a>
   </div>
 
   <footer>
