Add GoatCounter analytics

--- a/index.html
+++ b/index.html
@@ -418,5 +418,6 @@ function renderResults(checks, url) {
 
 document.getElementById('urlInput').addEventListener('keydown', e => { if(e.key==='Enter') startAudit(); });
 </script>
+<script data-goatcounter="https://maxdevtools.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
